--- a/asset/css/stylesheet.css
+++ b/asset/css/stylesheet.css
@@ -159,6 +159,16 @@ p {
     line-height: 1.6;
 }
 
+.large .project-title {
+    font-size: x-large;
+    font-weight: bolder;
+}
+
+.large .project-subtitle {
+    font-size: large;
+    font-weight: bold;
+}
+
 .project-title {
     font-size: large;
     font-weight: bold;
@@ -224,5 +234,61 @@ p {
     }
     .contact-card, p {
         font-size: 15px;
-    }  
+    } 
+    .large {
+        height: 200px;
+    } 
+}
+
+@media screen and (max-width: 375px) {
+    header,
+    main {
+      flex-direction: column;
+    }
+    header {
+        background-color: var(--white);
+        height:max-content;
+    }
+    h1 {
+        text-align: center;
+        padding: 0;
+    }
+    nav a {
+        padding: 0 15px;
+    }
+    nav a:hover {
+        border: 0;
+    }
+    .container {
+        margin: 20px 0 20px -20px;
+    }
+    .content {
+        padding: 0 0 0 10px;
+    }
+    h2 {
+        font-size: 17px;
+        font-weight: bold;
+        font-family: "Abel";
+    }
+    .contact-card, p {
+        font-size: 15px;
+    } 
+    .large {
+        width: 70vw;
+        height: 200px;
+        padding: 0 2px 0 0;
+    } 
+    .medium {
+        display: flex;
+        flex-direction: column;
+        width: fit-content;
+        height: fit-content;
+        margin-top: 0;
+        /* border: 1px solid white; */
+    }
+    .small {
+        width: 70vw;
+        /* margin: 1vw 0 0 0; */
+        padding: 2px 0;
+    }
 }
